Prevent voice broadcast header overflow

--- a/res/css/voice-broadcast/atoms/_VoiceBroadcastHeader.pcss
+++ b/res/css/voice-broadcast/atoms/_VoiceBroadcastHeader.pcss
@@ -22,6 +22,7 @@ limitations under the License.
 
 .mx_VoiceBroadcastHeader_content {
     flex-grow: 1;
+    min-width: 0;
 }
 
 .mx_VoiceBroadcastHeader_room {
@@ -38,4 +39,14 @@ limitations under the License.
     font-size: $font-12px;
     display: flex;
     gap: $spacing-4;
+
+    i {
+        flex-shrink: 0;
+    }
+
+    span {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
 }
